# SQL-FromScratch

./: CMakeLists.txt  LICENSE  README.md  fetch_data.py  orders.csv  products.csv  users.csv
src/: arena.hpp  blob.cpp  blob.hpp  btree.cpp  btree.hpp  catalog.cpp  catalog.hpp  common.hpp  compile.cpp  compile.hpp  demo.cpp  demo.hpp  ephemeral.cpp  ephemeral.hpp  main.cpp  os_layer.cpp  os_layer.hpp  pager.cpp  pager.hpp  parser.cpp  parser.hpp  repl.cpp  repl.hpp  semantic.cpp  semantic.hpp  types.cpp  types.hpp  vm.cpp  vm.hpp
src/tests/: blob.cpp  btree.cpp  ephemeral.cpp  pager.cpp  parser.cpp  parser.hpp
